# kinova-ros2

kinova_bringup/: CMakeLists.txt
kinova_bringup/launch/: kinova_robot_launch.py  moveit_robot_launch.py
kinova_bringup/launch/config/: robot_parameters.yaml
kinova_bringup/moveit_resource/: joint_limits.yaml  ompl_planning.yaml
kinova_demo/ros2_nodes/: pose_action_client.py
kinova_driver/: CMakeLists.txt  package.xml
kinova_driver/include/kinova_driver/: kinova_fingers_action.h  kinova_joint_angles_action.h  kinova_joint_trajectory_controller.h  kinova_ros_types.h
kinova_driver/src/: kinova_arm.cpp  kinova_comm.cpp  kinova_fingers_action.cpp  kinova_joint_angles_action.cpp  kinova_joint_trajectory_controller.cpp  kinova_tool_pose_action.cpp
kinova_driver/src/joint_trajectory_action/: joint_trajectory_action_server.cpp
kinova_driver/src/nodes/: kinova_arm_driver.cpp  kinova_interactive_control.cpp  kinova_tf_updater.cpp
kinova_msgs/: CMakeLists.txt
